--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ li {
   padding: 120px 0;
 }
 .title {
+  margin-bottom: 72px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -97,6 +98,9 @@ button:focus {
 }
 .menu-item:focus {
   color: #404bbf;
+}
+.contact li {
+  display: flex;
 }
 .contact ul {
   display: flex;
@@ -193,10 +197,13 @@ button:focus {
   justify-content: space-between;
 }
 .team-item {
+  text-align: center;
+  padding-bottom: 32px;
   background-color: #ffffff;
   width: calc((100% - 3 * 24px) / 4);
 }
 .team-title {
+  padding: 32px 0 8px 0;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -205,12 +212,29 @@ button:focus {
   font-family: var(--font-family);
   color: #2e2f42;
 }
+.portfolio-list {
+  display: flex;
+  flex-direction: column;
+}
+.portfolio-list-wrapper {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.portfolio-list-item-wapper {
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
+  padding: 32px 16px;
+}
+.portfolio-list-wrapper:first-child {
+  margin-bottom: 48px;
+}
 .team-text {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  text-align: center;
   color: var(--slate);
   font-family: var(--font-family);
 }
@@ -219,7 +243,6 @@ button:focus {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  text-align: center;
   font-family: var(--font-family);
   color: #2e2f42;
 }
@@ -228,7 +251,6 @@ button:focus {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  text-align: center;
   color: var(--slate);
   font-family: var(--font-family);
 }
@@ -236,6 +258,7 @@ button:focus {
   background: var(--navy-blue);
 }
 .about-text {
+  margin-top: 16px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -245,4 +268,12 @@ button:focus {
 }
 footer .span-logo {
   color: var(--cloud);
+}
+
+.about-wrapper {
+  max-width: 264px;
+  padding: 100px 0;
+}
+.about-wrapper .logo {
+  margin-bottom: 16px;
 }
