--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,12 @@ a {
 li {
   list-style-type: none;
 }
+img {
+  display: block;
+}
 .container {
-  max-width: 1128px;
+  padding: 0 15px 0 15px;
+  max-width: 1158px;
   margin: 0 auto;
 }
 .container-padding {
@@ -54,6 +58,9 @@ button {
 }
 button:focus {
   background-color: #404bbf;
+}
+.header-main {
+  border-bottom: 1px solid #e7e9fc;
 }
 .header {
   display: flex;
@@ -214,12 +221,11 @@ button:focus {
 }
 .portfolio-list {
   display: flex;
-  flex-direction: column;
-}
-.portfolio-list-wrapper {
-  display: flex;
-  justify-content: space-around;
   flex-wrap: wrap;
+  gap: 24px;
+}
+.portfolio-list-item:nth-child(-n + 3) {
+  margin-bottom: 24px;
 }
 .portfolio-list-item-wapper {
   border-bottom: 1px solid #e7e9fc;
