--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ li {
 img {
   display: block;
 }
-.container {
+.wrapper {
   padding: 0 15px 0 15px;
   max-width: 1158px;
   margin: 0 auto;
@@ -138,15 +138,16 @@ button:focus {
   background: var(--navy-blue);
   display: flex;
   justify-content: center;
+  padding: 188px 0 188px;
 }
-.hero-container {
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
   max-width: 498px;
-  padding: 188px 0;
 }
 .hero-title {
+  max-width: 496px;
   font-family: var(--font-family);
   font-weight: 700;
   font-size: 56px;
@@ -168,6 +169,7 @@ button:focus {
   color: #ffffff;
   padding: 16px 32px;
   border-radius: 4px;
+  min-width: 169px;
 }
 .hero-btn:hover {
   background: var(--ocean);
