--- a/css/style.css
+++ b/css/style.css
@@ -248,13 +248,19 @@ button:focus {
 .team-text {
   text-align: center;
 }
+
+.portfolio {
+  padding: 120px 0 120px 0;
+}
+
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
+  column-gap: 24px;
+  row-gap: 48px;
 }
-.portfolio-list-item:nth-child(-n + 3) {
-  margin-bottom: 24px;
+.portfolio-title {
+  margin-bottom: 8px;
 }
 .portfolio-list-item-wapper {
   border-bottom: 1px solid #e7e9fc;
