--- a/css/style.css
+++ b/css/style.css
@@ -295,26 +295,25 @@ button:focus {
   color: var(--slate);
   font-family: var(--font-family);
 }
+
+footer .span-logo {
+  color: var(--cloud);
+}
+
 .about {
   background: var(--navy-blue);
+  padding: 100px 0;
+}
+.logo-footer {
+  display: inline-block;
+  margin-bottom: 16px;
 }
 .about-text {
-  margin-top: 16px;
+  max-width: 264px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--cloud);
   font-family: var(--font-family);
-}
-footer .span-logo {
-  color: var(--cloud);
-}
-
-.about-wrapper {
-  max-width: 264px;
-  padding: 100px 0;
-}
-.about-wrapper .logo {
-  margin-bottom: 16px;
 }
