--- a/css/style.css
+++ b/css/style.css
@@ -152,11 +152,10 @@ button:focus {
   justify-content: center;
   padding: 188px 0 188px;
 }
-.wrapper {
+.hero-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 498px;
 }
 .hero-title {
   max-width: 496px;
